# dnd_master

./: .gitignore  CMakeLists.txt  README.md  campaign.cpp  campaign.hpp  campaign.ui  checks.json  dm_map.ui  edit_campaign.ui  editcampaign.cpp  editcampaign.hpp  global.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  map.cpp  map.hpp  maps.cpp  maps.hpp
qt/: campaign.ui  edit_campaign.ui  edit_map.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  pc_map.ui
tests/: 0000_create_new_campaign_insufficient_privilege.cpp  0001_create_new_campaign.cpp  0001_z_load_campaign.cpp  0002_create_new_map.cpp  0003_maps_image_files.cpp  CMakeLists.txt  create_new_campaign.cpp  create_new_campaign_insufficient_privilege.cpp  test0.cpp
tests_qt/: CMakeLists.txt  qt_main_test.cpp  test0.cpp
